@@ -19,7 +19,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import org.apache.maven.execution.MavenSession;
 import org.apache.maven.model.Dependency;
@@ -112,8 +111,7 @@ public class DefaultTychoResolver implements TychoResolver {
 
     @Override
     public void resolveMavenProject(MavenSession session, MavenProject project, List<MavenProject> mavenProjects) {
-        List<ReactorProject> reactorProjects = mavenProjects.stream().map(DefaultReactorProject::adapt)
-                .collect(Collectors.toList());
+        List<ReactorProject> reactorProjects = mavenProjects.stream().map(DefaultReactorProject::adapt).toList();
         resolveProject(session, project, reactorProjects);
     }
 
